<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="edu.wit.mobileapp.wellness_app.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_guidedMeditation"
            app:destination="@id/guidedMeditation" />
        <action
            android:id="@+id/action_navigation_home_to_breathing3"
            app:destination="@id/breathing3" />
        <action
            android:id="@+id/action_navigation_home_to_sounds2"
            app:destination="@id/sounds2" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="edu.wit.mobileapp.wellness_app.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="edu.wit.mobileapp.wellness_app.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/guidedMeditation"
        android:name="edu.wit.mobileapp.wellness_app.ui.home.GuidedMeditation"
        android:label="guided_meditation_fragment"
        tools:layout="@layout/guided_meditation_fragment" />
    <fragment
        android:id="@+id/breathing3"
        android:name="edu.wit.mobileapp.wellness_app.ui.home.Breathing"
        android:label="breathing_fragment"
        tools:layout="@layout/breathing_fragment" />
    <fragment
        android:id="@+id/sounds2"
        android:name="edu.wit.mobileapp.wellness_app.ui.home.Sounds"
        android:label="Sounds" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="edu.wit.mobileapp.wellness_app.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>